# goit-pythonweb-hw-10

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
src/conf/: config.py
src/core/: depend_service.py  email_token.py
src/entity/: models.py
src/repositories/: base.py  contacts.py  user_repository.py
src/repository/: contacts.py
src/routes/: contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  contacts.py  email.py  upload_file_service.py
